# Numerical-model-of-reactive-transport

./: .pre-commit-config.yaml  Analytical Solution.ipynb  Crank-Nicolson.ipynb  Example_Workflow.ipynb  Forward Difference Code.ipynb  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
src/reactive_transport/: __init__.py
tests/: test.py  test_main.py  test_simple.py
