[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reactive_transport"
version = "0.1.0"
classifiers = [
  "Private :: Do Not Upload",
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
  "pytest",
  "uncertainties",
]

[tool.black]
line-lenght = 80

[tool.ruff]
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  "RUF",         # Ruff-specific
  "UP",          # pyupgrade
]

[tool.pytest.ini_options]
pythonpath = "src"
